more styles, form validation

--- a/css/content.css
+++ b/css/content.css
@@ -3,9 +3,9 @@ body {
     min-height: 95vh;
     max-height: 100vh;
     font-family: var(--main-font-family);
-    line-height: var(--main-line-height);
     position: relative;
     z-index: 1;
+    font-size: var(--main-font-size);
 }
 
 body h1 {
@@ -39,6 +39,7 @@ section h2 {
     padding-left: 50px;
     position: sticky;
     background-color: var(--section-header-background-color);
+    color: var(--header-footer-text-color);
     top: 0;
     opacity: 0;
     transform: translateX(+200px);
@@ -96,4 +97,38 @@ section > div a:hover {
 section#contact form > div {
     display: flex;
     justify-content: space-between;
+}
+
+form {
+    background-color: var(--section-background-color);
+    padding: 20px;
+    border-radius: 5px;
+}
+
+form div {
+    margin-bottom: 10px;
+}
+
+form label, form input, form textarea {
+    display: block;
+    width: 100%;
+}
+
+form input, form textarea {
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--section-background-color);
+    color: #EEE;
+}
+
+form input[type="submit"] {
+    background-color: var(--section-background-color);
+    color: #EEE;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+form input[type="submit"]:hover {
+    background-color: var(--section-background-color);
 }
