--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,12 @@
     --header-footer-text-color: rgba(197, 202, 209, 1);
 
     --header-font-family: JetBrains MonoThick, monospace;
-    --header-line-height: 2.5;
 
     --section-header-background-color: rgba(35, 37, 43, 0.8);
     --section-background-color: rgba(255, 255, 255, 0.02);
 
     --main-font-family: JetBrains Mono, monospace;
-    --main-line-height: 1.7;
+    --main-font-size: clamp(.9rem, 1.5vw, 1.5rem);
 
     --nav-button-background-color: rgba(31, 33, 39, 0.9);
 
