--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,19 @@
     --body-background-color: rgba(15, 17, 23, 1);
     --header-footer-background-color: rgba(25, 27, 33, 0.8);
     --header-footer-text-color: rgba(197, 202, 209, 1);
-
     --header-font-family: JetBrains MonoThick, monospace;
 
-    --section-header-background-color: rgba(35, 37, 43, 0.8);
-    --section-background-color: rgba(255, 255, 255, 0.02);
-
-    --main-font-family: JetBrains Mono, monospace;
-    --main-font-size: clamp(.9rem, 1.5vw, 1.5rem);
-
-    --nav-button-background-color: rgba(31, 33, 39, 0.9);
-
-    --nav-ul-background-color: rgba(41, 43, 49, 0.9);
-    --nav-li-background-color: rgba(21, 23, 29, 0.9);
+    --nav-button-background-color: var(--content-dark-color);
+    --nav-ul-background-color: var(--content-dark-color);
+    --nav-li-background-color: var(--content-light-color);
     --nav-link-color: rgba(144, 147, 152, 1);
     --nav-link-hover-color: rgba(218, 165, 32, 1);
     --nav-link-active-color: rgba(245, 245, 220, 1);
 
+    --main-font-family: JetBrains Mono, monospace;
+    --main-font-size: clamp(.9rem, 1.5vw, 1.5rem);
+    --section-header-background-color: rgba(35, 37, 43, 0.8);
+    --section-background-color: rgba(255, 255, 255, 0.02);
     --content-light-color: rgba(31, 33, 39, 0.8);
     --content-dark-color: rgba(21, 23, 29, 0.8);
     --section-text-color: rgba(255, 255, 255, 1);
