--- a/css/mobile-adjustments.css
+++ b/css/mobile-adjustments.css
@@ -7,11 +7,8 @@
         position: absolute;
         top: 0;
         right: 20px;
-        width: 50px;
-        height: 4vh;
-        border-radius: 10%;
-        margin: .5vh;
-        transition: background-color 0.4s ease;
+        height: 100%;
+        margin-right: 3vw;
         border: none;
     }
 
@@ -52,5 +49,17 @@
         display: flex;
         align-items: center;
         justify-content: center;
+    }
+}
+
+@media (max-width: 800px) {
+    section > div:nth-child(even) {
+        margin-right: 7%;
+        margin-left: 2%;
+    }
+
+    section > div:nth-child(odd) {
+        margin-right: 2%;
+        margin-left: 7%;
     }
 }
