--- a/css/content.css
+++ b/css/content.css
@@ -127,3 +127,34 @@ form input[type="submit"] {
 form input[type="submit"]:hover {
     background-color: var(--nav-link-hover-color);
 }
+
+dialog {
+    background: var(--header-footer-background-color);
+    border-radius: 20px;
+    padding: 20px;
+    position: relative;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 1);
+}
+
+#feedbackContent {
+    padding: 10px 0;
+}
+
+#closeDialogBtn {
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: var(--nav-link-active-color);
+}
+
+.success {
+    color: var(--success-color);
+}
+
+.failure {
+    color: var(--error-color);
+}
