--- a/css/mobile-adjustments.css
+++ b/css/mobile-adjustments.css
@@ -31,7 +31,7 @@
     nav ul.visible {
         position: absolute;
         top: 100%;
-        right: 27px; /* width of scrollbar */
+        right: 27px;
         width: 200px;
         display: flex;
         flex-direction: column;
