--- a/css/content.css
+++ b/css/content.css
@@ -1,5 +1,5 @@
 body {
-    background-color: var(--body-background-color);
+    background-color: var(--background-4);
     height: 95vh;
     font-family: var(--main-font-family);
     position: relative;
