--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
 :root {
     /*sunset*/
-    --background-4: rgba(69, 97, 150, 1);
-    --background-3: rgba(188, 183, 203, 1);
-    --background-2: rgb(224, 188, 120);
-    --background-1: rgba(218, 165, 32, 1);
+    --background-1: rgba(238, 175, 97, 1);
+    --background-2: rgb(251, 144, 98, 1);
+    --background-3: rgba(238, 93, 108, 1);
+    --background-4: rgba(206, 73, 147, 1);
+    --background-5: rgba(106, 13, 131, 1);
+
     --header-footer-background-color: rgba(25, 27, 33, 0.8);
     --header-footer-text-color: rgba(197, 202, 209, 1);
     --header-font-family: JetBrains MonoThick, monospace;
