--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
     --background-1: rgba(238, 175, 97, 1);
     --background-2: rgb(251, 144, 98, 1);
     --background-3: rgba(238, 93, 108, 1);
-    --background-4: rgba(206, 73, 147, 1);
+    --background-4: rgb(144, 73, 206, 1);
     --background-5: rgba(106, 13, 131, 1);
 
     --header-footer-background-color: rgba(25, 27, 33, 0.8);
@@ -55,4 +55,15 @@
     border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 10px;
     -webkit-backdrop-filter: blur(4px);
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+html::-webkit-scrollbar {
+display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+html {
+-ms-overflow-style: none;  /* IE and Edge */
+scrollbar-width: none;  /* Firefox */
 }
